--- a/src/main/webapp/admin/harrastajat/harrastajat.xhtml
+++ b/src/main/webapp/admin/harrastajat/harrastajat.xhtml
@@ -43,8 +43,8 @@
 				</h:column>
 			</h:dataTable>
 		</ace:column>
-		<ace:column headerText="Kortti" styleClass="lefttext">
-			<h:outputText value="#{_harrastaja.korttinumero}" />
+		<ace:column headerText="Jäsennumero" styleClass="lefttext">
+			<h:outputText value="#{_harrastaja.jäsennumero}" />
 		</ace:column>
 		<ace:column headerText="Infotsk">
 			<h:graphicImage value="/kuvat/valittu.png" rendered="#{_harrastaja.infotiskille}" />
