--- a/src/main/webapp/admin/harrastajat/sopimukset.xhtml
+++ b/src/main/webapp/admin/harrastajat/sopimukset.xhtml
@@ -84,6 +84,6 @@
 		action="#{harrastajaAdmin.peruutaSopimusmuutos}" image="/kuvat/peruuta_muutos.png">
 		<f:ajax render="@form" />
 	</h:commandButton>
-	<h:commandButton styleClass="ikoni"
+	<h:commandButton styleClass="ikoni" rendered="#{sopimus != null}"
 		onclick="ice.ace.instance('form:vahvistaSopimuksenPoisto').show();" image="/kuvat/poista.png" immediate="true" />
 </ui:composition>
