--- a/src/main/webapp/käyttäjä/sopimukset.xhtml
+++ b/src/main/webapp/käyttäjä/sopimukset.xhtml
@@ -48,7 +48,7 @@
 						<h:outputText value="#{_sopimuslasku.laskurivi.lasku.laskurivejä}" />
 					</ace:column>
 					<ace:column headerText="Summa" styleClass="lefttext">
-						<h:outputText value="#{_sopimuslasku.laskurivi.lasku.verollinenHinta}">
+						<h:outputText value="#{_sopimuslasku.laskurivi.rivihinta}">
 							<f:convertNumber type="currency" currencySymbol="€" locale="fi-FI" />
 						</h:outputText>
 					</ace:column>
