--- a/src/main/webapp/admin/laskutus/laskut.xhtml
+++ b/src/main/webapp/admin/laskutus/laskut.xhtml
@@ -56,9 +56,9 @@
 			sortBy="#{_lasku.laskurivejä}" styleClass="lefttext">
 			<h:outputText value="#{_lasku.laskurivejä}" />
 		</ace:column>
-		<ace:column headerText="Summa" filterBy="#{_lasku.verollinenHinta}" filterMatchMode="contains"
-			sortBy="#{_lasku.verollinenHinta}" styleClass="lefttext">
-			<h:outputText value="#{_lasku.verollinenHinta}">
+		<ace:column headerText="Summa" filterBy="#{_lasku.yhteishinta}" filterMatchMode="contains"
+			sortBy="#{_lasku.yhteishinta}" styleClass="lefttext">
+			<h:outputText value="#{_lasku.yhteishinta}">
 				<f:convertNumber type="currency" currencySymbol="€" locale="fi-FI" />
 			</h:outputText>
 		</ace:column>
@@ -89,21 +89,8 @@
 				<ace:column headerText="Yksikkö" styleClass="lefttext">
 					<h:outputText value="#{_laskurivi.yksikkö}" />
 				</ace:column>
-				<ace:column headerText="Verokanta" styleClass="lefttext">
-					<h:outputText value="ALV#{_laskurivi.verokanta}" />
-				</ace:column>
-				<ace:column headerText="Veroton hinta" styleClass="lefttext">
-					<h:outputText value="#{_laskurivi.verotonHinta}">
-						<f:convertNumber type="currency" currencySymbol="€" locale="fi-FI" />
-					</h:outputText>
-				</ace:column>
-				<ace:column headerText="ALVn osuus" styleClass="lefttext">
-					<h:outputText value="#{_laskurivi.ALVnOsuus}">
-						<f:convertNumber type="currency" currencySymbol="€" locale="fi-FI" />
-					</h:outputText>
-				</ace:column>
-				<ace:column headerText="Verollinen hinta" styleClass="lefttext">
-					<h:outputText value="#{_laskurivi.verollinenHinta}">
+				<ace:column headerText="Hinta" styleClass="lefttext">
+					<h:outputText value="#{_laskurivi.rivihinta}">
 						<f:convertNumber type="currency" currencySymbol="€" locale="fi-FI" />
 					</h:outputText>
 				</ace:column>
