--- a/src/main/webapp/ilmoittautuminen.xhtml
+++ b/src/main/webapp/ilmoittautuminen.xhtml
@@ -7,6 +7,10 @@
 	xmlns:ace="http://www.icefaces.org/icefaces/components" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
 	<style>
+a:link {
+	color: inherit;
+}
+
 body {
 	background: url(kuvat/ilmo_tausta.png) no-repeat center center fixed;
 	-webkit-background-size: cover;
@@ -27,6 +31,46 @@ body {
 	-webkit-box-shadow: #787878 5px 5px 5px;
 	-moz-box-shadow: #787878 5px 5px 5px;
 	box-shadow: #787878 5px 5px 5px;
+}
+
+.tilasto {
+	width: 300px;
+	height: 300px;
+	position: absolute;
+	bottom: 10px;
+	right: 10px;
+	padding: 5px;
+	border: 1px solid black;
+	background: rgba(50, 50, 50, 0.2);
+}
+
+.treeni {
+	display: block;
+	padding: 5px;
+	border: 1px solid black;
+	background: rgba(50, 50, 50, 0.2);
+	margin-bottom: 10px;
+	margin-left: 20px;
+}
+
+.treeniteksti {
+	font-size: 30px;
+	font-weight: bold;
+}
+
+.valittutreeni {
+	display: block;
+	padding: 5px;
+	border: 3px solid white;
+	background: rgba(50, 50, 50, 0.2);
+	margin-bottom: 10px;
+	margin-left: 20px;
+}
+
+.tilastoteksti {
+	font-size: 30px;
+	font-family: Helvetica;
+	color: lightgreen;
 }
 
 .logo {
@@ -80,6 +124,18 @@ body {
 <h:body onload="document.getElementById('formi:korttinumero').focus();">
 	<f:view>
 		<ace:growlMessages />
+		<h:panelGroup styleClass="tilasto">
+			<h:panelGrid columns="2" style="width:100%;">
+				<h:outputText value="Harrastajia" styleClass="tilastoteksti" />
+				<h:outputText value="X" styleClass="tilastoteksti" />
+				<h:outputText value="Treenejä" styleClass="tilastoteksti" />
+				<h:outputText value="X" styleClass="tilastoteksti" />
+				<h:outputText value="Treenikäyntejä" styleClass="tilastoteksti" />
+				<h:outputText value="X" styleClass="tilastoteksti" />
+				<h:outputText value="Vyöarvoja" styleClass="tilastoteksti" />
+				<h:outputText value="X" styleClass="tilastoteksti" />
+			</h:panelGrid>
+		</h:panelGroup>
 		<h:form id="formi">
 			<h:commandButton action="#{ilmoittautuminen.lueKortti()}" value="." style="display:none" id="luekortti" />
 			<br />
@@ -123,58 +179,23 @@ body {
 						<h:outputText value="#{treeniharrastaja.nimi}" />
 					</h:panelGrid>
 				</h:panelGrid>
-
-				<!-- 				
-					<div class="kortti">
-						<table>
-							<tr>
-								<td>
-									<ace:graphicImage value="kuvat/logo.png" class="logo" rendered="#{treeniharrastaja == null}" /> 
-									<ace:graphicImage value="kuvat/mies.jpg" class="kuva" rendered="#{ilmoittautuminen.mies}" /> 
-									<ace:graphicImage value="kuvat/nainen.jpg" class="kuva" rendered="#{ilmoittautuminen.nainen}" /> 
-									<ace:graphicImage value="#{treeniharrastaja.kuva.tieto}" class="kuva" rendered="#{ilmoittautuminen.omaKuva}" />
-								</td>
-								<td style="vertical-align:top">
-									<h:inputText value="#{ilmoittautuminen.korttinumero}" required="true" styleClass="syotto korttinumero"
-										requiredMessage="Arvo on pakollinen" id="korttinumero" rendered="#{treeniharrastaja == null}"
-										onkeydown="if (event.keyCode == 13) document.getElementById('formi:luekortti').click()" /> 
-									<h:commandButton
-										action="#{ilmoittautuminen.lueKortti()}" value="." style="display:none" id="luekortti" /> <br /> 
-									<h:outputText value="#{treeniharrastaja.nimi}" rendered="#{treeniharrastaja != null}" styleClass="nimi" />
-								</td>
-							</tr>
-							<tr>
-								<td>
-									<h:graphicImage styleClass="vyö" value="/kuvat/vyöt/#{treeniharrastaja.tuoreinVyöarvo.id}.png" rendered="#{treeniharrastaja != null}"/>
-								</td>
-							</tr>
-						</table>
-					</div>
-				</h:panelGroup>
--->
-				<ace:dataTable rendered="#{treeniharrastaja != null}" value="#{tulevatTreenit}" var="_treeni" selectionMode="single"
-					stateMap="#{ilmoittautuminen.stateMap}" style="margin-left:20px; font-size:25px;"
-					rowSelectListener="#{ilmoittautuminen.treeniValittu}">
-					<ace:ajax event="select" render="@this formi:napit" execute="@this" />
-					<ace:column headerText="Päivä">
-						<h:outputText value="#{_treeni.päivä}" />
-					</ace:column>
-					<ace:column headerText="Alkaa">
-						<h:outputText value="#{_treeni.alkaa}">
-							<f:convertDateTime pattern="HH:mm" timeZone="EET"/>
-						</h:outputText>
-					</ace:column>
-					<ace:column headerText="Päättyy">
-						<h:outputText value="#{_treeni.päättyy}">
-							<f:convertDateTime pattern="HH:mm" timeZone="EET"/>
-						</h:outputText>
-					</ace:column>
-					<ace:column headerText="Treeni">
-						<h:outputText value="#{_treeni.nimi}">
-							<f:convertDateTime pattern="HH:mm" timeZone="EET"/>
-						</h:outputText>
-					</ace:column>
-				</ace:dataTable>
+				<ui:repeat value="#{tulevatTreenit}" var="_treeni">
+					<h:panelGroup styleClass="#{ilmoittautuminen.isTreeniValittu(_treeni) ? 'valittutreeni' : 'treeni'}">
+						<h:commandLink action="#{ilmoittautuminen.valitseTreeni(_treeni)}">
+							<h:panelGrid style="width:300px;">
+								<h:outputText value="#{_treeni.nimi}" styleClass="treeniteksti"/>
+								<h:panelGrid columns="5">
+									<ui:repeat value="#{_treeni.vetäjät}" var="_vetäjä">
+										<h:panelGrid>
+											<ace:graphicImage value="API/kayttaja/kuva/#{_vetäjä.id}"/>
+											<h:outputText value="#{_vetäjä.etunimi}"/>
+										</h:panelGrid>
+									</ui:repeat>
+								</h:panelGrid>
+							</h:panelGrid>
+						</h:commandLink>
+					</h:panelGroup>
+				</ui:repeat>
 				<h:panelGrid id="napit">
 					<h:commandButton image="kuvat/ok.jpg" value="tallenna" id="tallenna" rendered="#{ilmoittautuminen.treeniValittu}"
 						styleClass="ikoni" action="#{ilmoittautuminen.tallenna}" />
@@ -183,6 +204,7 @@ body {
 				</h:panelGrid>
 			</h:panelGrid>
 		</h:form>
+
 	</f:view>
 </h:body>
 
