--- a/src/main/webapp/ilmoittautuminen.xhtml
+++ b/src/main/webapp/ilmoittautuminen.xhtml
@@ -33,6 +33,19 @@ body {
 	box-shadow: #787878 5px 5px 5px;
 }
 
+.vetäjäkuva {
+	height: 100px;
+}
+
+.vetäjäteksti {
+	font-size: 25px;
+	font-weight: bold;
+	position: relative;
+	bottom: 20px;
+	background: lightgrey;
+	padding: 3px;
+}
+
 .tilasto {
 	width: 300px;
 	height: 300px;
@@ -62,7 +75,7 @@ body {
 	display: block;
 	padding: 5px;
 	border: 3px solid white;
-	background: rgba(50, 50, 50, 0.2);
+	background: rgba(0, 150, 0, 0.2);
 	margin-bottom: 10px;
 	margin-left: 20px;
 }
@@ -123,7 +136,7 @@ body {
 </h:head>
 <h:body onload="document.getElementById('formi:korttinumero').focus();">
 	<f:view>
-		<ace:growlMessages />
+		<ace:growlMessages/>
 		<h:panelGroup styleClass="tilasto">
 			<h:panelGrid columns="2" style="width:100%;">
 				<h:outputText value="Harrastajia" styleClass="tilastoteksti" />
@@ -139,7 +152,6 @@ body {
 		<h:form id="formi">
 			<h:commandButton action="#{ilmoittautuminen.lueKortti()}" value="." style="display:none" id="luekortti" />
 			<br />
-
 			<h:panelGrid columns="3" columnClasses="ylareuna,ylareuna,ylareuna">
 				<h:panelGrid rendered="#{treeniharrastaja == null}" columns="2">
 					<ace:graphicImage value="kuvat/logo.png" class="logo" />
@@ -149,8 +161,8 @@ body {
 				</h:panelGrid>
 				<h:panelGrid rendered="#{treeniharrastaja != null}" columns="2" styleClass="kortti">
 					<h:panelGrid>
-						<ace:graphicImage value="kuvat/mies.jpg" class="kuva" rendered="#{ilmoittautuminen.mies}" />
-						<ace:graphicImage value="kuvat/nainen.jpg" class="kuva" rendered="#{ilmoittautuminen.nainen}" />
+						<ace:graphicImage value="kuvat/mies.png" class="kuva" rendered="#{ilmoittautuminen.mies}" />
+						<ace:graphicImage value="kuvat/nainen.png" class="kuva" rendered="#{ilmoittautuminen.nainen}" />
 						<ace:graphicImage value="#{treeniharrastaja.kuva.tieto}" class="kuva" rendered="#{ilmoittautuminen.omaKuva}" />
 						<h:graphicImage styleClass="vyö" value="/kuvat/vyöt/#{treeniharrastaja.tuoreinVyöarvo.id}.png" />
 					</h:panelGrid>
@@ -182,24 +194,40 @@ body {
 				<ui:repeat value="#{tulevatTreenit}" var="_treeni">
 					<h:panelGroup styleClass="#{ilmoittautuminen.isTreeniValittu(_treeni) ? 'valittutreeni' : 'treeni'}">
 						<h:commandLink action="#{ilmoittautuminen.valitseTreeni(_treeni)}">
-							<h:panelGrid style="width:300px;">
-								<h:outputText value="#{_treeni.nimi}" styleClass="treeniteksti"/>
-								<h:panelGrid columns="5">
+							<f:ajax render="@form"/>
+							<h:panelGrid style="width:500px;">
+								<h:outputText value="#{_treeni.nimi} (#{_treeni.tyyppi.nimi})" styleClass="treeniteksti"/>
+								<h:outputText value="#{_treeni.sijainti}" styleClass="treeniteksti" />
+								<h:panelGrid columns="5" style="width:100%">
 									<ui:repeat value="#{_treeni.vetäjät}" var="_vetäjä">
-										<h:panelGrid>
-											<ace:graphicImage value="API/kayttaja/kuva/#{_vetäjä.id}"/>
-											<h:outputText value="#{_vetäjä.etunimi}"/>
+										<h:panelGrid style="display:inline-table; text-align:center">
+											<ace:graphicImage value="API/kayttaja/kuva/#{_vetäjä.id}" styleClass="vetäjäkuva" />
+											<h:outputText value="#{_vetäjä.etunimi}" styleClass="vetäjäteksti" />
 										</h:panelGrid>
 									</ui:repeat>
+									<h:panelGrid styleClass="treeniteksti">
+										<h:outputText value="#{_treeni.alkaa}">
+											<f:convertDateTime pattern="HH:mm"/>
+										</h:outputText>
+										<h:outputText value="#{_treeni.päättyy}">
+											<f:convertDateTime pattern="HH:mm"/>
+										</h:outputText>
+									</h:panelGrid>
+									<h:panelGrid style="float:right">
+										<h:graphicImage value="/kuvat/vyöt/#{_treeni.vyöAlaraja.id}.png" style="height:40px"
+											rendered="#{_treeni.vyöAlaraja != null}" />
+										<h:graphicImage value="/kuvat/vyöt/#{_treeni.vyöYläraja.id}.png" style="height:40px"
+											rendered="#{_treeni.vyöYläraja != null}" />
+									</h:panelGrid>
 								</h:panelGrid>
 							</h:panelGrid>
 						</h:commandLink>
 					</h:panelGroup>
 				</ui:repeat>
 				<h:panelGrid id="napit">
-					<h:commandButton image="kuvat/ok.jpg" value="tallenna" id="tallenna" rendered="#{ilmoittautuminen.treeniValittu}"
+					<h:commandButton image="kuvat/ok.png" value="tallenna" id="tallenna" rendered="#{ilmoittautuminen.treeniValittu}"
 						styleClass="ikoni" action="#{ilmoittautuminen.tallenna}" />
-					<h:commandButton image="kuvat/peruuta.jpg" value="peruuta" styleClass="ikoni" immediate="true"
+					<h:commandButton image="kuvat/peruuta.png" value="peruuta" styleClass="ikoni" immediate="true"
 						action="#{ilmoittautuminen.peruuta}" rendered="#{treeniharrastaja != null || ilmoittautuminen.treeniValittu}" />
 				</h:panelGrid>
 			</h:panelGrid>
